Fixed WelcomePanel image scroll on smaller screens

--- a/res/css/pages/home/panels/WelcomePanel.scss
+++ b/res/css/pages/home/panels/WelcomePanel.scss
@@ -3,6 +3,8 @@
   padding-top: 80px;
   padding-bottom: 100px;
   padding-left: 20px;
+  position: relative;
+  overflow: hidden;
 }
 
 .tc_WelcomePanel_block {
@@ -40,6 +42,7 @@
 .tc_WelcomePanel_image {
   position: absolute;
   right: 0;
+  top: 30px;
 }
 
 @media (max-width: 899px) {
